--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Components Todo App</title>
-  <script src='./todo-app.js'></script>
+  <script type="module" src="./todo-app.js"></script>
   <link rel="stylesheet" type="text/css" href="./global.css">
   <style>
     main {
